feat: 🎸 Minecraft 1.20.1（Fabric）に対応する
Stonecutterに1.20.1-fabricノードを追加。初のMCバージョン`//? if`ゲート、
Fabric初のaccesswidener（RenderType.CompositeState等のアクセス開放）、
JDK21専用API（Math.clamp等）のポータブル置き換えが必要になった。
CIのbuildジョブもノードごとの並列matrixへ分割し、runtimeジョブは
通常PRでは正典ノードのみに絞った。